--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="_formInvitationService.eventLoad" id="lock-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
 
-                <div id="profile" class="page-layout simple tabbed">
+                <div id="profile" class="layout-invitation tabbed">
 
                         <!-- HEADER -->
                         <div class="header" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-sm="row"
