--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,7 +2,7 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">Invitacion desestimada</div>
+        <div class="error-code">Invitación cancelada</div>
 
         <div class="message">se ha cancelado la invitación al evento:</div>
 
