--- a/src/app/main/pages/errors/500/error-500.component.scss
+++ b/src/app/main/pages/errors/500/error-500.component.scss
@@ -15,6 +15,10 @@ error-500 {
                 text-align: center;
                 margin-bottom: 16px;
                 font-weight: 600;
+
+                @include media-breakpoint('xs') {
+                    font-size: 55px;
+                }
             }
 
             .message {
