ajustes visuales form confirm

--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -15,7 +15,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Nombre Completo</mat-label>
+                    <mat-label>Nombre</mat-label>
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                     <input name="name" formControlName="name" matInput required>
                 </mat-form-field>
@@ -39,7 +39,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Teléfonos</mat-label>
+                    <mat-label>Teléfono de Contacto</mat-label>
                     <mat-icon matSuffix class="secondary-text">phone</mat-icon>
                     <input formControlName="phone" matInput>
                 </mat-form-field>
@@ -66,7 +66,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Empresa/Institución</mat-label>
+                    <mat-label>Empresa / Institución</mat-label>
                     <mat-icon matSuffix class="secondary-text">domain</mat-icon>
                     <input name="company" formControlName="company" matInput>
                 </mat-form-field>
