--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,11 +2,11 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">Invitación cancelada</div>
+        <div class="error-code">Lamentamos su ausencia,</div>
 
-        <div class="message">se ha cancelado la invitación al evento:</div>
+        <div class="message">muchas gracias.</div>
 
-        <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
+     
 
 
         <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
