--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-content-wrapper">
     <mat-toolbar matDialogTitle class="mat-accent m-0">
         <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-            <span class="title-dialog dialog-title">Enviar invitación a:</span>
+            <span class="title-dialog dialog-title">Enviar a:</span>
             <button mat-icon-button (click)="matDialogRef.close(true)" aria-label="Close dialog">
                 <mat-icon>close</mat-icon>
             </button>
@@ -27,9 +27,7 @@
         
                     </a>
         
-        
                 </div>
-    
 
                 <mat-progress-bar *ngIf="_campaignService.allLoading" color="accent" class="checklist-progressbar"
                 mode="determinate" [value]="_campaignService.value * 10 " bufferValue="100">
@@ -42,9 +40,6 @@
                     
                     <div class="h1"> {{  _campaignService.statusSendInvitation }} </div>
     
-                   
-   
- 
                 </span>
 
                 <span fxLayoutAlign="center center" >
@@ -61,9 +56,7 @@
                     </li>
                     
                         </ul>
-                    
-                        
- 
+
                 </span>
 
             </div>
