--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -2,17 +2,12 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">Confirmación exitosa!</div>
+        <div class="error-code">Muchas gracias!</div>
 
-        <div class="message">a confirmado asistencia para el evento: </div>
-
+        <div class="message">por confirmar su asistencia al evento:  </div>
 
         <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
 
-
-        <div class="sub-message">
-           
-        </div>
 
         <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
 
