--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -84,7 +84,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Numero de Contacto</mat-label>
-                    <input matInput formControlName="numberFijo">
+                    <input matInput formControlName="phone">
                     <mat-icon matSuffix >phone</mat-icon>
 
                 </mat-form-field>
