--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -67,7 +67,7 @@
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Empresa / Institución</mat-label>
-                    <mat-icon matSuffix class="secondary-text">domain</mat-icon>
+                    <mat-icon matSuffix class="secondary-text">company</mat-icon>
                     <input name="company" formControlName="company" matInput>
                 </mat-form-field>
             </div>
