--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -78,7 +78,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Empresa / Institución </mat-label>
                     <input matInput formControlName="company">
-                    <mat-icon matSuffix>domain</mat-icon>
+                    <mat-icon matSuffix>company</mat-icon>
 
                 </mat-form-field>
 
