bug in name form confirm

--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -64,7 +64,7 @@
 
                     <mat-form-field appearance="outline">
                         <mat-label>Apellido</mat-label>
-                        <input matInput formControlName="name">
+                        <input matInput formControlName="lastname">
                         <mat-icon matSuffix>account_circle</mat-icon>
 
                     </mat-form-field>
