cambios textos de exito y fracaso

--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,14 +2,12 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">Lamentamos su ausencia,</div>
+        <div class="error-code">Se ha indicado de su ausencia al evento.</div>
 
-        <div class="message">muchas gracias.</div>
+        <div class="message">Muchas gracias.</div>
 
      
-
-
-        <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
+       <!-- <a class="report-link" href="http://www.turevento.net/">turEvento.net</a> -->
 
     </div>
 
