--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -2,11 +2,15 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">Muchas gracias!</div>
-
-        <div class="message">por confirmar su asistencia al evento:  </div>
-
         <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
+
+        <div class="message">Muchas gracias.</div>
+
+        <div class="message">Se ha completado exitosamente su proceso de registro.
+
+            Muchas gracias.</div>
+
+        
 
 
         <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
