--- a/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
+++ b/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
@@ -1,3 +1,5 @@
+<div class="center content p-24 pb-56 pr-sm-92 " fusePerfectScrollbar>
+
 <div *ngIf="btnDisplay" fxFlex fxLayout="row" fxLayoutAlign="start center" class="p-24">
 
     <div class="close-button-wrapper" fxFlex="0 1 auto" fxFlex.gt-sm="220px" (click)="deselectAll()">
@@ -35,4 +37,6 @@
 
     </div>
 
+
+    </div>
 </div>
