--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,11 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
 
 
 
+.my-class .mat-dialog-container {
+    width: 600px !important;
+}
+
+
 
 
 
