cambios en textos de exito y fracaso

--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -3,16 +3,8 @@
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
         <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
-
+        <div class="message">Se ha completado exitosamente su proceso de registro.</div>
         <div class="message">Muchas gracias.</div>
-
-        <div class="message">Se ha completado exitosamente su proceso de registro.
-
-            Muchas gracias.</div>
-
-        
-
-
         <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
 
     </div>
