cambio en subtitulo completar formulario de registro

--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -40,7 +40,7 @@
                     <div>
                         <div class="title">{{ _formInvitationService.campaignName }}</div>
                         <div class="subtitle">
-                            Confirmar asistencia
+                            Completar Formulario
                         </div>
                     </div>
 
