--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -96,7 +96,7 @@
                     </mat-form-field>
 
 
-                    <button mat-raised-button (click)="confirmInvitation()" class="submit-button" color="accent">
+                    <button mat-raised-button (click)="confirmInvitation()" class="submit-button  mt-24 mt-md-0" color="accent">
                         <mat-icon matSuffix>done</mat-icon>
                         Confirmar
                     </button>
